<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:background="#EEEEEE">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/colorBackground"
                app:cardElevation="3dp">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardElevation="3dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/logo"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/companyTitle"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:scaleType="fitCenter"
                        android:padding="7dp"
                        app:srcCompat="@drawable/agent_icon"/>

                <TextView
                        android:id="@+id/companyTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/logo"
                        app:layout_constraintTop_toTopOf="@+id/logo"
                        android:layout_marginTop="9dp"
                        android:gravity="center_vertical"
                        android:text="@string/company_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"/>

                <TextView
                        android:id="@+id/sloganTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/companyTitle"
                        app:layout_constraintTop_toBottomOf="@+id/companyTitle"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/slogan"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorBackground"
                app:cardElevation="3dp">

            <TextView
                    android:id="@+id/visionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="17dp"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/vision_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>

            <TextView
                    android:id="@+id/vision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="57dp"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/vision"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorBackground"
                app:cardElevation="3dp">

            <TextView
                    android:id="@+id/futurePlansTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="17dp"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/future_plans"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>

            <TextView
                    android:id="@+id/futurePlans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="57dp"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/future_plan"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorBackground"
                app:cardElevation="3dp">

            <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:drawablePadding="17dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawableStart="@drawable/email_icon"
                    android:background="#00000000"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>